--- a/marketplace/templates/jinja2/Gallery.php.html
+++ b/marketplace/templates/jinja2/Gallery.php.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+
+{% extends "jinja2/base.html" %}
+{% load static %}
+{% block content %}
+<div id="head" class="col-sm-12">
+        We are a community of photographers and photograph seekers. Quivver collects professional quality action shots from around the world and delivers them to your devices for a fraction of the cost of a hired pro.
+        If you want to sell your pictures on our site, get in touch with us here.
+    </div>
+{% endblock %}
