--- a/marketplace/templates/jinja2/home.html
+++ b/marketplace/templates/jinja2/home.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "jinja2/base.html" %}
 {% load static %}
 {% block content %}
     <body>
@@ -11,7 +11,7 @@
                 <div class="card-body">
                     <h5 class="card-title">We are a community of photographers and photograph seekers. </h5>
                     <p class="card-text">Welcome to our site!</p>
-                    <a href="About.php" class="btn btn-primary" id="homebutton">Learn about us.</a>
+                    <a href="{% url 'about' %}" class="btn btn-primary" id="homebutton">Learn about us.</a>
                 </div>
             </div>
         </header>
@@ -19,14 +19,11 @@
 
     <div class="row">
         <div class="wrapper">
-            <img src="{% static 'marketplace/img/DSC02205.jpg' %}" class="d-block w-100" alt="...">
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
                     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-
-                    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
                 </ol>
                 <div class="carousel-inner">
 
@@ -38,9 +35,6 @@
                     </div>
                     <div class="carousel-item">
                         <img src="{% static 'marketplace/img/DSC01280.jpg' %}" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                    <img src="" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
