--- a/src/marketplace/templates/jinja2/gallery.html
+++ b/src/marketplace/templates/jinja2/gallery.html
@@ -3,7 +3,12 @@
 {% load static %}
 {% block content %}
 <div id="head" class="col-sm-12">
-        We are a community of photographers and photograph seekers. Quivver collects professional quality action shots from around the world and delivers them to your devices for a fraction of the cost of a hired pro.
-        If you want to sell your pictures on our site, get in touch with us here.
+<ul>
+{% for i in object_list %}
+    <img src="{{i.file.url}}"/>
+{% empty %}
+    <li>No articles yet.</li>
+{% endfor %}
+</ul>
     </div>
 {% endblock %}
