--- a/src/marketplace/templates/jinja2/base.html
+++ b/src/marketplace/templates/jinja2/base.html
@@ -20,51 +20,51 @@
     <link rel="stylesheet" href="{% static 'marketplace/style.css' %}">
 </head>
 
-    <nav class="navbar navbar-expand-lg  navbar-light fixed-top" style="background-color: #dcdcdc;" id='nav'>
-            <div class="container" >
-    <nav id = "home">
-        <div class="navbar-brand">
-            <a class="navbar-brand"
-               href="{% url 'home' %}">
-                <img src="{% static 'marketplace/img/logo.png' %}" id="logo" alt="logo" style="max-height: 50px; max-width: 50px"/>
+<nav class="navbar navbar-expand-lg  navbar-light fixed-top" style="background-color: #dcdcdc;" id='nav'>
+    <div class="container">
+        <nav id="home">
+            <div class="navbar-brand">
+                <a class="navbar-brand"
+                   href="{% url 'home' %}">
+                    <img src="{% static 'marketplace/img/logo.png' %}" id="logo" alt="logo"
+                         style="max-height: 50px; max-width: 50px"/>
 
-            </a>
-        </div>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" style="float:right" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'home' %}">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'gallery' %}">Gallery</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'about' %}">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'contact' %}">Contact</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'login' %}"> Sign Up </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'login' %}">Login</a>
-
-            </ul>
-        </div>
-    </nav>
+                </a>
             </div>
-    </nav>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" style="float:right" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="{% url 'home' %}">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'gallery' %}">Gallery</a>
+                    </li>
 
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'about' %}">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'contact' %}">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'login' %}"> Sign Up </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'login' %}">Login</a>
+
+                </ul>
+            </div>
+        </nav>
+    </div>
+</nav>
+<body>
 {% block content %}
-
-    {% endblock %}
-
+{% endblock %}
+</body>
 <footer>
     <div style='margin-top:50px'>
         <div class="container text-center connect-container">
